Remove types and subtypes from database