@@ -1,10 +1,10 @@
 package org.opendatadiscovery.oddplatform.mapper;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.MapUtils;
@@ -30,12 +30,11 @@ import org.opendatadiscovery.oddplatform.dto.DataEntityDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityGroupLineageDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityLineageDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityLineageStreamDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntitySubtypeDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityTypeDto;
 import org.opendatadiscovery.oddplatform.dto.DataSourceDto;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntityPojo;
-import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntitySubtypePojo;
-import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntityTypePojo;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.DataSourcePojo;
-import org.opendatadiscovery.oddplatform.model.tables.pojos.NamespacePojo;
 import org.opendatadiscovery.oddplatform.utils.Page;
 import org.opendatadiscovery.oddplatform.utils.Pair;
 import org.springframework.stereotype.Component;
@@ -43,6 +42,8 @@ import org.springframework.stereotype.Component;
 @Component
 @RequiredArgsConstructor
 public class DataEntityMapperImpl implements DataEntityMapper {
+    private static DataEntityTypeDictionary TYPE_DICTIONARY = null;
+
     private final DataSourceMapper dataSourceMapper;
     private final OwnershipMapper ownershipMapper;
     private final TagMapper tagMapper;
@@ -51,32 +52,36 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     private final DataQualityMapper dataQualityMapper;
 
     @Override
-    public DataEntity mapPojo(final DataEntityDimensionsDto dataEntityDto) {
-        final List<DataEntityType> types = dataEntityDto.getTypes()
-            .stream()
-            .map(this::mapType)
-            .toList();
+    public DataEntity mapPojo(final DataEntityDimensionsDto dto) {
+        final Set<DataEntityTypeDto> types = DataEntityTypeDto.findByIds(dto.getDataEntity().getTypeIds());
 
-        final List<DataEntityType.NameEnum> typeNames = types.stream()
-            .map(DataEntityType::getName)
-            .toList();
+        final Integer subtypeId = dto.getDataEntity().getSubtypeId();
 
-        final DataEntity entity = mapPojo(dataEntityDto.getDataEntity())
-            .types(types)
-            .subType(mapSubType(dataEntityDto.getSubtype()))
-            .ownership(ownershipMapper.mapDtos(dataEntityDto.getOwnership()))
-            .dataSource(dataSourceMapper.mapPojo(new DataSourceDto(dataEntityDto.getDataSource(),
-                dataEntityDto.getNamespace())))
-            .tags(dataEntityDto.getTags() != null
-                ? dataEntityDto.getTags().stream().map(tagMapper::mapPojo).collect(Collectors.toList())
+        final DataEntitySubType subtype = DataEntitySubtypeDto.findById(subtypeId)
+            .map(this::mapSubType)
+            .orElseThrow(() -> new IllegalArgumentException(
+                String.format("No subtype with id %d for entity %s was found", subtypeId,
+                    dto.getDataEntity().getOddrn())));
+
+        final DataEntity entity = mapPojo(dto.getDataEntity())
+            .types(types.stream().map(this::mapType).toList())
+            .subType(subtype)
+            .ownership(ownershipMapper.mapDtos(dto.getOwnership()))
+            .dataSource(dataSourceMapper.mapPojo(new DataSourceDto(dto.getDataSource(), dto.getNamespace())))
+            .tags(dto.getTags() != null
+                ? dto.getTags().stream().map(tagMapper::mapPojo).collect(Collectors.toList())
                 : null);
-        if (typeNames.contains(DataEntityType.NameEnum.ENTITY_GROUP)) {
-            final List<DataEntityRef> dataEntityRefs = dataEntityDto.getGroupsDto().entities().stream()
+
+        if (types.contains(DataEntityTypeDto.DATA_ENTITY_GROUP)) {
+            final List<DataEntityRef> groupEntities = dto.getGroupsDto().entities()
+                .stream()
                 .map(this::mapReference)
                 .toList();
-            entity.setEntities(dataEntityRefs);
-            entity.setItemsCount(dataEntityDto.getGroupsDto().itemsCount());
+
+            entity.setEntities(groupEntities);
+            entity.setItemsCount(dto.getGroupsDto().itemsCount());
         }
+
         return entity;
     }
 
@@ -108,11 +113,15 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     @Override
     public DataEntityDetails mapDtoDetails(final DataEntityDetailsDto dto) {
         final DataEntityPojo pojo = dto.getDataEntity();
+        final Integer subtypeId = dto.getDataEntity().getSubtypeId();
 
-        final List<DataEntityType> types = dto.getTypes()
-            .stream()
-            .map(this::mapType)
-            .collect(Collectors.toList());
+        final Set<DataEntityTypeDto> types = DataEntityTypeDto.findByIds(dto.getDataEntity().getTypeIds());
+
+        final DataEntitySubType subtype = DataEntitySubtypeDto.findById(subtypeId)
+            .map(this::mapSubType)
+            .orElseThrow(() -> new IllegalArgumentException(
+                String.format("No subtype with id %d for entity %s was found", subtypeId,
+                    dto.getDataEntity().getOddrn())));
 
         final List<DataEntityRef> groups = Optional.ofNullable(dto.getDataEntityGroups()).stream()
             .flatMap(Collection::stream)
@@ -129,25 +138,20 @@ public class DataEntityMapperImpl implements DataEntityMapper {
             .createdAt(addUTC(pojo.getCreatedAt()))
             .updatedAt(addUTC(pojo.getUpdatedAt()))
             .dataEntityGroups(groups)
-            .types(types)
-            .subType(mapSubType(dto.getSubtype()))
+            .types(types.stream().map(this::mapType).toList())
+            .subType(subtype)
             .ownership(ownershipMapper.mapDtos(dto.getOwnership()))
             .dataSource(dataSourceMapper.mapPojo(new DataSourceDto(dto.getDataSource(), dto.getNamespace())))
             .tags(dto.getTags().stream().map(tagMapper::mapPojo).collect(Collectors.toList()))
             .metadataFieldValues(metadataFieldMapper.mapDtos(dto.getMetadata()))
             .viewCount(pojo.getViewCount());
 
-        final List<DataEntityType.NameEnum> typeNames = types
-            .stream()
-            .map(DataEntityType::getName)
-            .collect(Collectors.toList());
-
-        if (typeNames.contains(DataEntityType.NameEnum.SET)) {
+        if (types.contains(DataEntityTypeDto.DATA_SET)) {
             details.setVersionList(datasetVersionMapper.mapPojo(dto.getDataSetDetailsDto().datasetVersions()));
             details.setStats(mapStats(dto.getDataSetDetailsDto()));
         }
 
-        if (typeNames.contains(DataEntityType.NameEnum.TRANSFORMER)) {
+        if (types.contains(DataEntityTypeDto.DATA_TRANSFORMER)) {
             details.setSourceList(dto.getDataTransformerDetailsDto().sourceList()
                 .stream()
                 .distinct()
@@ -162,7 +166,7 @@ public class DataEntityMapperImpl implements DataEntityMapper {
                 .collect(Collectors.toList()));
         }
 
-        if (typeNames.contains(DataEntityType.NameEnum.QUALITY_TEST)) {
+        if (types.contains(DataEntityTypeDto.DATA_QUALITY_TEST)) {
             final DataQualityTestExpectation expectation = new DataQualityTestExpectation()
                 .type(dto.getDataQualityTestDetailsDto().expectationType());
 
@@ -184,7 +188,7 @@ public class DataEntityMapperImpl implements DataEntityMapper {
                 .suiteUrl(dto.getDataQualityTestDetailsDto().suiteUrl());
         }
 
-        if (typeNames.contains(DataEntityType.NameEnum.CONSUMER)) {
+        if (types.contains(DataEntityTypeDto.DATA_CONSUMER)) {
             details.setInputList(dto.getDataConsumerDetailsDto()
                 .inputList()
                 .stream()
@@ -192,7 +196,7 @@ public class DataEntityMapperImpl implements DataEntityMapper {
                 .map(this::mapReference).collect(Collectors.toList()));
         }
 
-        if (typeNames.contains(DataEntityType.NameEnum.ENTITY_GROUP)) {
+        if (types.contains(DataEntityTypeDto.DATA_ENTITY_GROUP)) {
             final List<DataEntityRef> dataEntityRefs = dto.getGroupsDto().entities().stream()
                 .map(this::mapReference)
                 .toList();
@@ -200,7 +204,7 @@ public class DataEntityMapperImpl implements DataEntityMapper {
             details.setHasChildren(dto.getDataEntityGroupDetailsDto().hasChildren());
         }
 
-        if (typeNames.contains(DataEntityType.NameEnum.INPUT)) {
+        if (types.contains(DataEntityTypeDto.DATA_INPUT)) {
             details.setOutputList(dto.getDataInputDetailsDto()
                 .getOutputList()
                 .stream()
@@ -239,38 +243,36 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     }
 
     @Override
-    public DataEntityType mapType(final DataEntityTypePojo type) {
+    public DataEntityType mapType(final DataEntityTypeDto type) {
         if (type == null) {
             return null;
         }
 
-        return new DataEntityType().id(type.getId()).name(DataEntityType.NameEnum.fromValue(type.getName()));
+        return new DataEntityType()
+            .id(type.getId())
+            .name(DataEntityType.NameEnum.fromValue(type.name()));
     }
 
     @Override
-    public DataEntitySubType mapSubType(final DataEntitySubtypePojo sub) {
-        if (sub == null || sub.getId() == null) {
+    public DataEntitySubType mapSubType(final DataEntitySubtypeDto subtype) {
+        if (subtype == null) {
             return null;
         }
 
         return new DataEntitySubType()
-            .id(sub.getId())
-            .name(DataEntitySubType.NameEnum.fromValue(sub.getName()));
+            .id(subtype.getId())
+            .name(DataEntitySubType.NameEnum.fromValue(subtype.name()));
     }
 
     @Override
-    public DataEntityTypeDictionary mapTypeDict(final Map<DataEntityTypePojo, List<DataEntitySubtypePojo>> typeDict) {
-        return new DataEntityTypeDictionary()
-            .subtypes(typeDict.values()
-                .stream()
-                .flatMap(List::stream)
-                .map(this::mapSubType)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList()))
-            .types(typeDict.keySet()
-                .stream()
-                .map(this::mapType)
-                .collect(Collectors.toList()));
+    public DataEntityTypeDictionary getTypeDict() {
+        if (TYPE_DICTIONARY == null) {
+            TYPE_DICTIONARY = new DataEntityTypeDictionary()
+                .subtypes(Arrays.stream(DataEntitySubtypeDto.values()).map(this::mapSubType).toList())
+                .types(Arrays.stream(DataEntityTypeDto.values()).map(this::mapType).toList());
+        }
+
+        return TYPE_DICTIONARY;
     }
 
     @Override
@@ -283,16 +285,22 @@ public class DataEntityMapperImpl implements DataEntityMapper {
 
     @Override
     public DataEntityGroupLineageList mapGroupLineageDto(final DataEntityGroupLineageDto dataEntityGroupLineageDto) {
-        final List<DataEntityLineageStream> lineageStreams = dataEntityGroupLineageDto.lineageItems().stream()
+        final List<DataEntityLineageStream> lineageStreams = dataEntityGroupLineageDto.lineageItems()
+            .stream()
             .map(this::mapStream)
             .toList();
-        return new DataEntityGroupLineageList()
-            .items(lineageStreams);
+
+        return new DataEntityGroupLineageList().items(lineageStreams);
     }
 
     @Override
     public DataEntityRef mapRef(final DataEntityDto dto) {
         return mapReference(dto);
+    }
+
+    @Override
+    public DataEntityRef mapRef(final DataEntityPojo pojo) {
+        return mapReference(pojo);
     }
 
     private DataEntityLineageStream mapStream(final DataEntityLineageStreamDto upstream) {
@@ -311,9 +319,14 @@ public class DataEntityMapperImpl implements DataEntityMapper {
         final DataEntityPojo dataEntity = dto.getDataEntity();
         final DataSourcePojo dataSource = dto.getDataSource();
 
+        final List<DataEntityType> types = DataEntityTypeDto.findByIds(dto.getDataEntity().getTypeIds())
+            .stream()
+            .map(this::mapType)
+            .toList();
+
         return new DataEntityLineageNode()
             .id(dataEntity.getId())
-            .types(dto.getTypes().stream().map(this::mapType).collect(Collectors.toList()))
+            .types(types)
             .externalName(dataEntity.getExternalName())
             .internalName(dataEntity.getInternalName())
             .dataSource(dataSource != null
@@ -324,8 +337,13 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     private DataEntityRef mapReference(final DataEntityDto dto) {
         final DataEntityPojo pojo = dto.getDataEntity();
 
+        final List<DataEntityType> types = DataEntityTypeDto.findByIds(dto.getDataEntity().getTypeIds())
+            .stream()
+            .map(this::mapType)
+            .toList();
+
         return mapReference(pojo)
-            .types(dto.getTypes().stream().map(this::mapType).collect(Collectors.toList()))
+            .types(types)
             .hasAlerts(dto.isHasAlerts());
     }
 
